sort of fixed navbar z-index

--- a/css/navbars.css
+++ b/css/navbars.css
@@ -134,6 +134,7 @@
 	background:#BDBEC2;
 	height:44px;
 	text-align:center;
+	z-index:100000;
 
 }
 
@@ -206,7 +207,7 @@
 	height:62px;
 	width:100%;
 	background:#BDBEC2;
-	z-index:1000;
+	z-index:100000;
 
 }
 
@@ -302,6 +303,93 @@
 	padding-top:20px;
 	padding-left:50px;
 }
+
+
+	/* KARMA POINTS DISPLAY BADGE*/
+
+	.top-navbar-icon,
+	.karma_points_display {
+		float:right;
+		clear:none;
+		margin-bottom:5px;
+		margin-right:0px;
+		border-radius:25px;
+		border: 5px solid rgba(255,255,255,0.5);
+		background: #BDBEC2;
+		padding:0px 10px 4px 15px;
+
+
+	}
+
+
+	.karma_points_display {
+		background: #28A9D6;
+		margin-top:10px;
+	}
+
+	.top-navbar-icon.edit {
+		border:none;
+		background:transparent;
+	}
+
+	.top-navbar-icon-label,
+	.karma_points_display_label {
+		color:white;
+		display:inline-block;
+		margin-right:5px;
+		padding-top:0px;
+		padding-bottom:0px;
+		vertical-align: middle;
+	}
+
+	.top-navbar-icon-label p,
+	.karma_points_display_label p {
+		display:block;
+		line-height: 0.5;
+		margin-bottom:0px;
+		margin-top:5px;
+		padding-top:5px;
+		padding-bottom:0px;
+
+	}
+
+	.top-navbar-icon-label p:nth-child(1),
+	.karma_points_display_label p:nth-child(1)  {
+		padding-top:0px;
+
+	}
+
+	.badge {
+		display:inline-block;
+		font-size:1.5em;
+		padding:7px 5px 5px 5px;
+		background:transparent;
+		vertical-align: middle;
+
+	}
+
+	/*SCREEN NAV LINK*/
+
+	.nav_link_wrapper {
+		width:100%;
+		position:relative;
+		padding:5px 5px 5px 5px;
+	}
+
+	.nav_link {
+		font-size:1em;
+		padding:5px 5px 5px 15px;
+		color:#333;
+		margin-top:0px;
+		float:right;
+
+	}
+
+	.nav_link span {
+		font-size:.75em;
+		font-weight:lighter;
+
+	}
 
 
 
@@ -431,6 +519,29 @@
 	.karma_points_display .badge {
 		color:#28A9D6;
 	}
+
+	/*SCREEN NAV LINK*/
+
+		.nav_link_wrapper {
+			width:100%;
+			position:relative;
+			padding:10px 40px 10px 10px;
+		}
+
+		.nav_link {
+			font-size:1.5em;
+			padding:15px 15px 15px 15px;
+			margin-top:0px;
+			float:right;
+
+		}
+
+		.nav_link span {
+			font-size:.75em;
+			font-weight:lighter;
+
+		}
+
 
 }
 
