--- a/invite_friends_page/css/style.css
+++ b/invite_friends_page/css/style.css
@@ -17,7 +17,7 @@
 }
 
 .top-navbar-icon {
-    z-index:100000;
+
     position:fixed;
     margin-top:5px;
     top:0px;
